--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,16 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Ayarlar</string>
     <string name="action_logout">Çıkış Yap</string>
+    <string name="action_change_password">Şifre Değiştir</string>
 
 
     <string name="menu_home">Adım Takibi</string>
     <string name="menu_gallery">Profil Fotoğrafı Ekle</string>
     <string name="menu_slideshow">Su Takibi</string>
+
+    <string name="change_password_title">Şifre Değiştir</string>
+    <string name="current_password">Mevcut Şifre</string>
+    <string name="new_password">Yeni Şifre</string>
+    <string name="confirm_new_password">Yeni Şifre (Tekrar)</string>
+    <string name="update_password">Şifreyi Güncelle</string>
 </resources>
