--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_home">Adım Takibi</string>
     <string name="menu_gallery">Profil Fotoğrafı Ekle</string>
     <string name="menu_slideshow">Su Takibi</string>
+    <string name="menu_settings">Ayarlar</string>
 
     <string name="change_password_title">Şifre Değiştir</string>
     <string name="current_password">Mevcut Şifre</string>
